--- a/en/custom_localisation_l_english.properties
+++ b/en/custom_localisation_l_english.properties
@@ -1,4 +1,4 @@
-string_middle_ages코0=Medieval
+﻿string_middle_ages코0=Medieval
 string_classical코0=Classical
 string_song_era코0=Song
 string_pre_islamic코0=Pre-Islamic
@@ -14,7 +14,7 @@ string_zupan코0=Zupan
 string_ispan코0=Ispán
 string_official코0=official
 string_court코0=court
-string_bailif코0=bailif
+string_bailif코0=bailiff
 string_clergy코0=clergy
 string_republican코0=republican
 string_royalist코0=royalist
@@ -118,12 +118,12 @@ string_l_long_pepper코0=long pepper
 string_l_ceramics코0=ceramics
 string_l_sapphires코0=sapphires
 string_l_vanilla코0=vanilla
-string_l_ivory_figurines코0=ivory Carvings
+string_l_ivory_figurines코1=ivory carvings
 string_l_calligraphy코0=calligraphy
 string_l_frankincense코0=frankincense
 string_definite_article_before_country코0=the 
 string_empty코0=
-string_ruler_name_really코0={Root.Monarch.GetName}
+string_ruler_name_really코0=[Root.Monarch.GetName]
 string_regency_council코0=The Regency Council
 string_royal코0=Royal
 string_state코0=State
