--- a/en/decisions_l_english.properties
+++ b/en/decisions_l_english.properties
@@ -1,4 +1,4 @@
-designate_the_staple_port_title코0=Designate Calais as The Staple Port
+﻿designate_the_staple_port_title코0=Designate Calais as The Staple Port
 designate_the_staple_port_desc코0=In order to effectively tax things we need to regulate them. If we were to designate Calais as the sole point of import for the wool staple we would improve our tax revenues dramatically. 
 pol_commonwealth_title코0=Form Polish-Lithuanian Commonwealth
 pol_commonwealth_desc코0=Replace the personal union between Poland and Lithuania with a real union, welding the two countries together into one powerful state, capable of withstanding our enemies.
@@ -23,11 +23,11 @@ recognization_of_eastern_power_south_desc코1=By our territorial conquests we ha
 elevate_bishopric_title코0=Elevate Bishopric to an Archbishopric
 elevate_bishopric_desc코0=As a Prince-Elector of the Holy Roman Empire we have a much greater political power than the title Bishop would normally imply. Let us make use of this influence to convince the Holy See to elevate our Bishopric to an Archbishopric.
 secularization_of_protestant_theocracy_title코0=Secularization
-secularization_of_protestant_theocracy_desc코0=With the ties to Rome cut we no longer have a place in a bigger Christian hierarchy. Perhaps the faithful would be just as well served by a Monarch as they are by a {Root.Monarch.GetTitle}?
+secularization_of_protestant_theocracy_desc코0=With the ties to Rome cut we no longer have a place in a bigger Christian hierarchy. Perhaps the faithful would be just as well served by a Monarch as they are by a [Root.Monarch.GetTitle]?
 secularization_of_christian_theocracy_title코0=Secularization
-secularization_of_christian_theocracy_desc코0={Root.Monarch.GetTitle} is a fine title but it is time we stood on our own legs and used the influence we have in this state to build something stronger. However pious our state may be we should seize these lands for our our own descendants rather than risk the appointment of an incompetent successor.
+secularization_of_christian_theocracy_desc코0=[Root.Monarch.GetTitle] is a fine title but it is time we stood on our own legs and used the influence we have in this state to build something stronger. However pious our state may be we should seize these lands for our our own descendants rather than risk the appointment of an incompetent successor.
 inti_obligatory_religious_festivals_title코0=Inti Proselytization
-inti_obligatory_religious_festivals_desc코0=Apart from forcing them to place any deities or icons in our custody we should appoint deputies for our Sapa Inca to visit each and every part of our empire to perform the holy festivals of our religion. Attendence shall be mandatory, especially for those who cling to their heathen faiths.
+inti_obligatory_religious_festivals_desc코0=Apart from forcing them to place any deities or icons in our custody we should appoint deputies for our Sapa Inca to visit each and every part of our empire to perform the holy festivals of our religion. Attendance shall be mandatory, especially for those who cling to their heathen faiths.
 nahuatl_conversion_ceremonies_title코0=Nahuatl Proselytization
 nahuatl_conversion_ceremonies_desc코0=In order to properly teach all those who live in our conquered areas of the proper way to please the gods we must make it a routine to construct great temples with sacrificial stones in each and every provincial capital under our control. Here our subjects will partake in our sacred rituals and be made to see the grace of our gods.
 mesoamerican_sacrifical_ceremonies_title코0=Sacrificial Ceremonies
@@ -86,24 +86,24 @@ stop_foreign_slave_trade_desc코0=For too long we have been granting European tr
 stop_slave_trade_tooltip코0=Local Strongmen in provinces with Slave Trade as their main source of income will attempt to sidestep this edict for 15 years.
 pagan_conversion_to_christianity_title코0=Convert to Christianity
 pagan_conversion_to_christianity_desc코0=The Christian communities in our country are propagating the state to adopt their religion. This way they claim that we will be able to bring the Christian countries closer to our point of view.
-pagan_conversion_to_christianity_tooltip코0={Root.GetName} will adopt the Christian faith as practiced by their subjects as the new state religion.
+pagan_conversion_to_christianity_tooltip코0=[Root.GetName] will adopt the Christian faith as practiced by their subjects as the new state religion.
 pagan_conversion_to_islam_title코0=Convert to Islam
 pagan_conversion_to_islam_desc코0=The Muslim communities in our country are propagating for the state to adopt their religion. This way they claim that we will be able to bring other Muslim countries closer to our point of view.
-pagan_conversion_to_islam_tooltip코0={Root.GetName} will adopt the Muslim faith as practiced by their subjects as the new state religion.
+pagan_conversion_to_islam_tooltip코0=[Root.GetName] will adopt the Muslim faith as practiced by their subjects as the new state religion.
 pagan_conversion_to_buddhism_title코0=Convert to Buddhism
 pagan_conversion_to_buddhism_desc코0=The Buddhist communities in our country are propagating the state to adopt their religion. This way they claim that we will be able to bring other Buddhist countries closer to our point of view.
-pagan_conversion_to_buddhism_tooltip코0={Root.GetName} will adopt an Eastern faith as practiced by their subjects as the new state religion.
+pagan_conversion_to_buddhism_tooltip코0=[Root.GetName] will adopt an Eastern faith as practiced by their subjects as the new state religion.
 pagan_conversion_to_dharmic_title코0=Convert to an Indic Faith
 pagan_conversion_to_dharmic_desc코0=The Indic communities in our country are propagating for the state to adopt their religion. This way they claim that we will be able to bring other Hindu or Sikh countries closer to our point of view.
-pagan_conversion_to_dharmic_tooltip코0={Root.GetName} will adopt a Dharmic faith practiced by their subjects as the new state religion.
+pagan_conversion_to_dharmic_tooltip코0=[Root.GetName] will adopt a Dharmic faith practiced by their subjects as the new state religion.
 pagan_conversion_to_zoroastrian_title코0=Convert To Zoroastrianism
 pagan_conversion_to_zoroastrian_desc코0=The Zoroastrian communities in our country are propagating for the state to adopt their religion.
-pagan_conversion_to_zoroastrian_tooltip코0={Root.GetName} will adopt the Zoroastrian faith practiced by their subjects as the new state religion.
+pagan_conversion_to_zoroastrian_tooltip코0=[Root.GetName] will adopt the Zoroastrian faith practiced by their subjects as the new state religion.
 pagan_conversion_to_judaism_title코0=Convert To Judaism
 pagan_conversion_to_judaism_desc코0=The Jewish communities in our country are propagating the state to adopt their religion.
-pagan_conversion_to_judaism_tooltip코0={Root.GetName} will adopt the Jewish faith practiced by their subjects as the new state religion.
-abolished_slavery_act_tooltip코0=Every province owned by {Root.GetName} will stop producing Slaves.
-forming_spain_diplomatically_tooltip코0={Root.GetName} is the overlord in a vassalage or union between Castile and Aragon.
+pagan_conversion_to_judaism_tooltip코0=[Root.GetName] will adopt the Jewish faith practiced by their subjects as the new state religion.
+abolished_slavery_act_tooltip코0=Every province owned by [Root.GetName] will stop producing Slaves.
+forming_spain_diplomatically_tooltip코0=[Root.GetName] is the overlord in a vassalage or union between Castile and Aragon.
 tatar_nation_title코0=Re-form the Golden Horde
 tatar_nation_desc코0=Centuries ago our Great Father united our ancestors in their ancient homeland. He died leaving his sons to squabble and split his mighty empire into petty fiefs, small, weak and unworthy of his legacy! The disjointed remnants still sweep across the steppes instilling fear in the hearts of his enemies just like the Great Mongol army once did.\nNo more! A worthy people still carrying the banner of his legacy ride across these lands! While we now bow before a new God, the blood of Genghis Khan still flows through our veins. We are the Golden Horde and we are coming for what is rightfully ours!
 accept_rhodians_and_other_greeks_title코0=Rhodians and other Greeks in the Order
@@ -112,7 +112,7 @@ recently_changed_government_flag_tooltip코1=Has not changed Government Type for
 restore_the_shrine_of_ise_title코0=Restore the Ise Shrines
 restore_the_shrine_of_ise_desc코0=Barbarians have let the Great Shrine of Ise decay for lack of proper maintenance. We must restore this holy location to its proper status as the holiest site of our religion.
 empire_of_china_title코0=Claim The Empire of China
-empire_of_china_desc코0=The Chinese imperial traditions are tainted by a people who control no part of the realm of China. As the proud carrier of this legacy our {Root.Monarch.GetTitle} must be proclaimed the new {Root.GetTributaryOverlord} once we have secured the traditional capitals of the Empire.
+empire_of_china_desc코0=The Chinese imperial traditions are tainted by a people who control no part of the realm of China. As the proud carrier of this legacy our [Root.Monarch.GetTitle] must be proclaimed the new [Root.GetTributaryOverlord] once we have secured the traditional capitals of the Empire.
 empire_of_china_not_in_china코0=The current Empire of China owns no provinces in either the region of §YNorth China§!, §YSouth China§! or §YXinan§!.
 become_russian_principality_title코0=Adopt Autocratic Administration
 become_russian_principality_desc코0=We need a strong ruler to guide us in these troubled times. Let us centralize our power over the Boyars and create a government in the spirit of the old Kievan Rus'.
@@ -123,7 +123,7 @@ capital_in_belgrade_title코0=Move Capital to Belgrade
 capital_in_belgrade_desc코0=Belgrade occupies a key defensive and economic point in the Balkans and has in the past served as the capital of Serbia. We should make this great city our capital once again and restore it to the glorious city it once was!
 from_great_yuan_title코0=Reform Great Yuan
 from_great_yuan_desc코0=The heirs of Kublai Khan once ruled over all Chinese and Mongol lands. Let us rise to reclaim the legacy of the old Yuan and crush the weaker lineages that have attempted to claim the Empire that is our birthright!
-subject_all_mongols코2=All Mongol, Korchin, Kalkha, and Oirat lands must be ruled by {Root.GetName} or their vassals.
+subject_all_mongols코2=All Mongol, Korchin, Kalkha, and Oirat lands must be ruled by [Root.GetName] or their vassals.
 custom_tsardom_title코0=Claim Tsar Title
 custom_tsardom_desc코0=Our principality has grown to be one of the most powerful states of the planet. Clearly we are worthy of claiming the title of Tsar over all others?
 yemen_nation_title코0=Unite Yemen
@@ -150,8 +150,8 @@ enthrone_timurid_prince_desc코0=Amir Timur once crushed all realms in this regi
 tooltip_about_timurid_empire코0=This will make it possible for us to form the Timurid Empire.
 adopt_mamluk_government_title코0=Adopt Mamluk Government
 adopt_mamluk_government_desc코0=The Mamluks are still a strong factor in this region. We could gain their support by inviting these seasoned soldier slaves to participate in our government.
-conversion_of_convenience_title코0=Time for a {Root.Religion.GetName} {Root.Monarch.GetTitle}?
-conversion_of_convenience_desc코0=The fact that {Root.Monarch.GetName} {Root.Monarch.GetHerselfHimself} does not follow the official state religion has long been a great thorn in the side of those that fight for the spirits and minds of the {Root.GetAdjective} people. Perhaps it is time for {Root.Monarch.GetName} to let the good of {Root.Monarch.GetHerHis} people go before personal matters of faith?
+conversion_of_convenience_title코0=Time for a [Root.Religion.GetName] [Root.Monarch.GetTitle]?
+conversion_of_convenience_desc코0=The fact that [Root.Monarch.GetName] [Root.Monarch.GetHerselfHimself] does not follow the official state religion has long been a great thorn in the side of those that fight for the spirits and minds of the [Root.GetAdjective] people. Perhaps it is time for [Root.Monarch.GetName] to let the good of [Root.Monarch.GetHerHis] people go before personal matters of faith?
 reform_into_iqta_title코0=Adopt Islamic Government
 reform_into_iqta_desc코0=Kingship and governance can be many things and the traditions we rely on lie outside the mainstream of the Islamic world. By adopting the Iqta system we can assert our authority over the lands of the realm directly, with revenue rights given only to trusted Amirs.
 enforce_religion_muslim_title코0=Enforce Religious Unity
@@ -167,7 +167,7 @@ nepal_nation_title코0=Unification of Nepal
 nepal_nation_desc코0=While many of them have proud and ancient histories the Himalayan kingdoms are weak and divided. We must unite the entire mountain region under the rule of one kingdom. Together we will be an unstoppable force to the kings of Hindusthan. Content to live of their wealth they have squandered their riches for generations, and will be no match for our hardened armies.
 timurid_claims_abandoned_tooltip코0=§RAll Claims in the regions of Persia, Khorasan, Caucasia and Central Asia will be lost.§!
 rajput_nation_title코0=Unite the Rajputs
-rajput_nation_desc코0=The lands of Rajputana have been shattered and weak ever since the muslim invasion centuries ago. We must reclaim the great cities of the great dynasties that came before us and unite the princes of Rajputana!
+rajput_nation_desc코0=The lands of Rajputana have been shattered and weak ever since the Muslim invasion centuries ago. We must reclaim the great cities of the great dynasties that came before us and unite the princes of Rajputana!
 deccan_nation_title코0=Sultan of the Deccan
 deccan_nation_desc코0=This land was once foreign to our ancestors but we have made it our own. Here we have built a new society where Persianate influences have met local ancient Indian traditions. We have our own language, our own administrative traditions and our own myths and legends. It is time we show the world that the south has overcome its differences and is united as one.
 maratha_nation_title코0=Maratha Confederation
@@ -187,7 +187,7 @@ curtail_prussian_confederation_desc코0=We must put an end to the Prussian Confe
 curtail_prussian_confederation.tooltip코0=§YThe Prussian Confederation will not rise up against us.§!
 restore_mongol_empire_title코0=Restore the Mongol Empire
 restore_mongol_empire_desc코0=The empire of Genghis Khan has fallen, broken into many parts. We must restore his legacy by replicating the Great Khan's conquests. We will reconquer the Mongol Empire!
-mongolia_decision_tooltip코0=§Y{Root.GetName}§! owns all colonized provinces in the Mongolia region
+mongolia_decision_tooltip코0=§Y[Root.GetName]§! owns all colonized provinces in the Mongolia region
 restore_ilkhanate_decision_march_title코0=Restore the Ilkhanate
 restore_ilkhanate_decision_march_desc코0=As the Great Khan did long ago, we should delegate Persia to a subordinate Khan to ease the burden of ruling our vast empire.
 restore_ilkhanate_decision_title코0=Re-form the Ilkhanate
