--- a/en/diplo_reasons_l_english.properties
+++ b/en/diplo_reasons_l_english.properties
@@ -1,10 +1,11 @@
-DIPLO_CANCELED_TRIBUTARY코0=Abandoned Tributary
+﻿DIPLO_CANCELED_TRIBUTARY코1=Abandoned Tributary: 
 DIPLO_NO_FIGHTING코0=No ongoing fighting: 
 DIPLO_UNCONDITIONALLY_SURRENDERED코1=$WHO$ has §YUnconditionally Surrendered§! to $THEM$: 
 DIPLO_SET_PROVINCES_AS_VITAL코0=$THEM$ considers $WE$ provinces to be of vital interest: 
 DIPLO_SET_MUTUAL_PROVINCES_AS_VITAL코0=$THEM$ and $WE$ consider the same $NUM$ provinces to be of vital interest: 
 DIPLO_ALREADY_TRANSFERING_TRADE_POWER코0=Already giving trade power to $WHO$: 
 DIPLO_ALREADY_STEERING_TRADE코0=Already steering trade to $WHO$: 
+DIPLO_TRADECITY코0=$WHO$ is a trade city who wants to avoid alliances.
 DIPLO_TRADE_VASSALS코0=Number of countries transferring trade power to $WHO$: 
 DIPLO_TRADE_STEER_SLAVES코0=Number of countries steering trade to $WHO$: 
 DIPLO_ACTIVE_RELATION코0=Treaty is already active: 
@@ -161,6 +162,7 @@ DIPLO_NO_ENEMIES코0=No valid enemy:
 DIPLO_IS_CONSOLIDATING코0=Have plans on their own: 
 DIPLO_HAS_TRUCE_WITH코0=$WHO1$ has a truce with $WHO2$: 
 DIPLO_FEAR_OF_BEING_ANNEXED코0=Is being annexed: 
+DIPLO_RESTRICTED_REGION코0=Tradecharter Regional Scepticism
 DIPLO_TRADING_CITY코0=Is Trading City: 
 DIPLO_SELL_PROVINCE_FREE_CITY코0=Would lose §YFree City§! status: 
 DIPLO_SELL_PROVINCE_TRADE_LEAGUE코0=Would have to leave a §YTrade League§!: 
