--- a/en/government_names_l_english.properties
+++ b/en/government_names_l_english.properties
@@ -1,4 +1,4 @@
-EARLDOM코0=Earldom
+﻿EARLDOM코0=Earldom
 DUCHY코0=Duchy
 KINGDOM코0=Kingdom
 EMPIRE코0=Empire
@@ -152,7 +152,7 @@ HOLY_EMPIRE코0=Theocratic Empire
 METROPOLIS코0=Metropolis
 GREAT_METROPOLIS코0=Great Metropolis
 LORD_BISHOP코0=Lord Bishop
-LORD_ARCHBISHOP코0=Lord Arcbishop
+LORD_ARCHBISHOP코0=Lord Archbishop
 LAMA코0=Lama
 TULKU코0=Tulku
 GREAT_TULKU코0=Great Tulku
@@ -399,6 +399,8 @@ GRAND_SHARIF코0=Grand Sharif
 GREAT_SHARIF코0=Great Sharif
 MAYOR코0=Mayor
 MAYORESS코0=Mayoress
+POPE_ELECTOR코0=Pope-Elector
+POPETTE_ELECTOR코0=Popette-Elector
 BISHOP_ELECTOR코0=Bishop-Elector
 ARCHBISHOP_ELECTOR코0=Archbishop-Elector
 PATRIARCH_ELECTOR코0=Patriarch-Elector
