--- a/en/hints_l_english.properties
+++ b/en/hints_l_english.properties
@@ -1,4 +1,4 @@
-HINTS_DISABLE_ALL_HINTS코0=Turn Off
+﻿HINTS_DISABLE_ALL_HINTS코0=Turn Off
 HINTS_DISABLE_HINT코0=Disable This
 HINT_CONFIRM_DISABLE_TITLE코0=Turn Off Hints
 HINT_CONFIRM_DISABALE_DESC코0=Are you sure you want to turn off hints? You can enable them in the Options again.
@@ -8,7 +8,7 @@ HINT_MINIMIZE코0=Minimize Window
 HINT_DISABLETHIS_TIP코0=Will disable this hint from automatically showing again.
 HINT_TURNOFF_TIP코0=This will hide the hints interface. It can be enabled again through the options menu.
 HINT_BANNER_TEXT코0=Tell me more about...
-HINT_MODE_BUTTON코0=§YClick-for-Hint Mode§!\nShortcut: §Yh§!
+HINT_MODE_BUTTON코1=§YClick-for-Hint Mode§!
 HINT_MODE_BUTTON_DESC코0=This will allow you to click buttons and icons in the game for more info.
 HINT_INTRO_TILE코0=Hints
 HINT_INTRO_TEXT코0=Hints aim to help you by giving you information about things in the game. You can click the Click-for-Hint button in the top right to activate the hint mode. Once you are in the hint mode, most icons will glow in blue. Clicking on them will then give you information about what they do. You can minimize and maximize this interface by clicking the minimize/maximize button.
@@ -19,7 +19,7 @@ HINT_INCREASESTABILITY_TEXT코0=Stability can be increased by clicking the shiel
 HINT_LOSESTABILITY_TITLE코0=Losing Stability
 HINT_LOSESTABILITY_TEXT코0=Stability can be lost by events, by declaring war without a Casus Belli, by breaking a royal marriage or by having your ruler or heir die in combat.
 HINT_DUCATS_TITLE코0=Ducats
-HINT_DUCATS_TEXT코0=Ducats are the primary resourse in the game. They are used to purchase everything from new ships, to paying advisors' salaries, to recruiting armies.
+HINT_DUCATS_TEXT코0=Ducats are the primary resource in the game. They are used to purchase everything from new ships, to paying advisors' salaries, to recruiting armies.
 HINT_MONARCHPOINTS_TITLE코0=Monarch Points
 HINT_MONARCHPOINTS_TEXT코1=Monarch Points are among most important resources in the game. Monarch Points are used to unlock new Technology, Ideas and much more. The amount of Monarch Points you get per month depends on the abilities of your Ruler and can be boosted by hiring Advisors. There are three categories of Monarch Points: Administrative Power, Diplomatic Power and Military Power.
 HINT_MANPOWER_TITLE코0=Manpower
@@ -77,7 +77,7 @@ HINT_MACROBUILD_TEXT코0=The Production Interface is designed to make it easier 
 HINT_ADMINPOWER_TITLE코0=Administrative Power
 HINT_ADMINPOWER_TEXT코0=Administrative Power is possibly the most important resource in the game. Its primary uses are to make provinces into core provinces and to increase Administrative Technology or unlock new Ideas.
 HINT_DIPLOPOWER_TITLE코0=Diplomatic Power
-HINT_DIPLOPOWER_TEXT코0=Diplomatic Power is one of the primary resourses in the game. Its primary uses are to change culture in provinces and to increase Diplomatic Technology or unlock new Ideas.
+HINT_DIPLOPOWER_TEXT코0=Diplomatic Power is one of the primary resources in the game. Its primary uses are to change culture in provinces and to increase Diplomatic Technology or unlock new Ideas.
 HINT_MILPOWER_TITLE코0=Military Power
 HINT_MILPOWER_TEXT코0=Military Power is one of the primary resources in the game. Its primary uses are to increase Military Technology, hire Leaders or unlock new Ideas.
 HINT_CHANGEGOV_TITLE코0=Change Government
@@ -109,7 +109,7 @@ HINT_DIPUPKEEP_TEXT코0=Alliances, Royal Marriages, Subjects, Guarantees and Mil
 HINT_DIPREPUTATION_TITLE코0=Diplomatic Reputation
 HINT_DIPREPUTATION_TEXT코0=Diplomatic Reputation is a mechanic that allows you to have greater success in performing certain Diplomatic Actions. Diplomatically Annexing vassals is a process that takes several years and the time it takes is reduced by Diplomatic Reputation. Diplomatic Reputation also increases the likelihood of other nations accepting your diplomatic offers.
 HINT_RELIGION_TITLE코0=Religion
-HINT_RELIGION_TEXT코0=A major cause of division, other than cultural differences, are religious differences. A Catholic country, for example, will consider other countries that are Protestant, Reformed, Coptics or Orthodox as heretics, while it would consider other religions to be heathens. All the provinces in your country affect your Religious Unity. You can convert provinces to your religion with a Missionary.
+HINT_RELIGION_TEXT코0=A major cause of division, other than cultural differences, are religious differences. A Catholic country, for example, will consider other countries that are Protestant, Reformed, Coptic or Orthodox as heretics, while it would consider other religions to be heathens. All the provinces in your country affect your Religious Unity. You can convert provinces to your religion with a Missionary.
 HINT_RIVAL_TITLE코0=Rivals
 HINT_RIVAL_TEXT코0=Each country may select up to three Rivals. When you select a country as your Rival, your relations with them will be lowered, but their enemies will like you more. Rival countries have a higher chance of receiving Missions and Events that give them reasons to fight each other. It's free for them to Embargo each other, cheaper to demand more from one another in peace deals and weakening your rivals gives you Power Projection. Once set, a rival remains for 25 years, after which they can be changed in exchange for 100 diplomatic points.
 HINT_ADMTECH_TITLE코0=Administrative Technology
