--- a/en/fredmansmidsummerepistles_l_english.properties
+++ b/en/fredmansmidsummerepistles_l_english.properties
@@ -1,4 +1,4 @@
-MAldrig_en_iris_i_dessa_bleka_falt코0=Aldrig en iris på dessa bleka fält
+﻿MAldrig_en_iris_i_dessa_bleka_falt코0=Aldrig en iris på dessa bleka fält
 MDrick_ur_ditt_glas_se_Doden_pa_dig_vantar코0=Drick ur ditt glas, se Döden på dig väntar
 MGlimmande_Nymph_Blixtrande_oga코0=Glimmande Nymph Blixtrande öga
 MGrat_Fader_Berg_och_spela코0=Gråt Fader Berg och spela
