--- a/en/loadingtips_l_english.properties
+++ b/en/loadingtips_l_english.properties
@@ -1,4 +1,4 @@
-LOADING_TIP_0코0=Republics have elections every 4-8 years.
+﻿LOADING_TIP_0코0=Republics have elections every 4-8 years.
 LOADING_TIP_1코0=Attrition in winter can be really severe.\nIt might be better to pull back and plan your spring campaign.
 LOADING_TIP_2코0=Advisors not only give you a bonus from their specialty.\nThey also boost your Administrative, Diplomatic or Military Power.
 LOADING_TIP_3코0=Losing a war and a few provinces is no reason to quit.\nYou can take those back later, in your enemy's moment of weakness.
@@ -77,7 +77,7 @@ LOADING_TIP_75코0=Keep an eye out for coalitions. Stumbling into a war with mos
 LOADING_TIP_76코0=You cannot only forge a claim on adjacent provinces, but on all provinces sharing a sea-zone with one of your cores.
 LOADING_TIP_77코0=Many common actions have hotkeys.\nCheck the tooltips to find out what they are.
 LOADING_TIP_78코0=Use Control plus a number key to assign a selected unit to a control group. Hit the number key alone to instantly select the unit in question.
-LOADING_TIP_79코0=Manpower recovers slowly. Consider mixing a few mercenary regiments into your armies to conserve Manpower.
+LOADING_TIP_79코1=Manpower recovers slowly. Consider hiring Mercenary Companies to conserve Manpower.
 LOADING_TIP_80코0=Press the Home key to go to your capital province.
 LOADING_TIP_81코0=Skilled Advisors are a lot more expensive than less skilled ones. Make sure you can actually afford higher skill advisors before hiring them.
 LOADING_TIP_82코0=Don't just look at the Fire and Shock pips when comparing military units. Keep in mind your Fire and Shock modifiers, too.
@@ -100,3 +100,14 @@ LOADING_TIP_98코1=Use terrain to your advantage! Place your armies so that if a
 LOADING_TIP_99코0=An army besieging a fortress in enemy territory will be counted as the attacker in a battle when attacked, incurring terrain penalties.
 LOADING_TIP_100코0=This game takes a long time to master, don't be surprised to be learning new things after playing a thousand hours.
 LOADING_TIP_101코0=You might lose a battle (or more), but still win the war.\nIt's often worth fighting on after suffering initial setbacks in a war.
+
+
+
+
+
+
+
+
+
+
+
