--- a/en/kairismusic_l_english.properties
+++ b/en/kairismusic_l_english.properties
@@ -1,4 +1,4 @@
-Emperors_Road코0=Emperor's Road
+﻿Emperors_Road코0=Emperor's Road
 Forest_Shade코0=Forest Shade
 Jade_Ambitions코0=Jade Ambitions
 Silken_Path코0=Silken Path
