--- a/en/missions_l_english.properties
+++ b/en/missions_l_english.properties
@@ -1,4 +1,4 @@
-monopolize_british_cot_desc코0=Merchant companies are complaining that our wealth is flowing into the hands of foreign merchants and from there overseas. They are asking for government support in establishing dominance over British trade.
+﻿monopolize_british_cot_desc코0=Merchant companies are complaining that our wealth is flowing into the hands of foreign merchants and from there overseas. They are asking for government support in establishing dominance over British trade.
 monopolize_japanese_cot_title코0=Dominate Japanese Trade
 monopolize_italian_cot_title코0=Dominate Italian Trade
 monopolize_italian_cot_desc코0=Venice is first and foremost a trading nation. The powerful merchants are asking for support so they can dominate trade in Italy.
@@ -141,10 +141,10 @@ conquer_east_siberia_region_title코0=Conquest of Siberia
 conquer_east_siberia_region_desc코0=Siberia is vast and a natural place for our country to keep expanding. In order for our settlers to survive there we must do away with all foreign influence in the region. Our Cossack adventurers assure us that any states in this area will fall easily.
 conquer_the_whiteskin_title코0=Conquer the Whiteskin: $PROVINCENAME$
 conquer_the_whiteskin_desc코0=We must bring civilization to the barbarians of $PROVINCENAME$!
-kremlin_expansion_title코0=Strengthen the {Root.GetCapitalName} Kremlin
-kremlin_expansion_desc코0=Our people rely on us for protection but the fortress that guards our capital is a weak and undersized one. Let us expand the {Root.GetCapitalName} Kremlin and strengthen our defences, this will make the entire province safer and will allow our people to settle the land in peace.
+kremlin_expansion_title코0=Strengthen the [Root.GetCapitalName] Kremlin
+kremlin_expansion_desc코0=Our people rely on us for protection but the fortress that guards our capital is a weak and undersized one. Let us expand the [Root.GetCapitalName] Kremlin and strengthen our defences, this will make the entire province safer and will allow our people to settle the land in peace.
 portugal_conquest_of_hormuz_title코0=Seize Hormuz Island
-portugal_conquest_of_hormuz_desc코0=The straits of Hormuz are imparative to control the flow of trade between India, Iran and Arabian Iraq. By seizing control over the island of Hormuz we can dominate the local trade and lay claim to the maritime empire it once created.
+portugal_conquest_of_hormuz_desc코0=The straits of Hormuz are imperative to control the flow of trade between India, Iran and Arabian Iraq. By seizing control over the island of Hormuz we can dominate the local trade and lay claim to the maritime empire it once created.
 establish_colonial_nation_mission_canada_title코0=Establish Colonial Nation in Canada
 establish_colonial_nation_mission_canada_desc코0=Our colonists in Canada require our support. We should expand the colony until it is self-sufficient.
 establish_colonial_nation_mission_canada_tooltip코0=Create 5 City Level Colonies in Colonial Canada to form a Colonial Nation there.
@@ -210,7 +210,7 @@ conquer_mombasa_mission_desc코1=Mombasa is one of the trade ports on the Swahil
 conquer_mombasa_tt코0=Conquer the province of Mombasa.
 conquer_mogadishiu_mission_title코1=A foothold on the Somalian Coast - Mogadishu
 conquer_mogadishiu_mission_desc코1=Mogadishu is one of the trade ports on the Somali Coast. Conquering it would give us an additional port and provide a stepping stone into the trade route towards Asia.
-conquer_mogadishiu_tt코0=Conquer the province of Mogadishiu.
+conquer_mogadishiu_tt코0=Conquer the province of Mogadishu.
 discover_aden_gulf_node_title코0=Discover the gates of Asia
 discover_aden_gulf_node_desc코0=Famous for its coffee beans and its culture of trade, the Arabian peninsula has always laid on the trade routes between Asia and Europe. We need to explore their trade node before continuing to India.
 discover_aden_gulf_tt코0=Discover the Gulf of Aden node.
@@ -228,7 +228,7 @@ discover_goa_tt코0=Discover the Goa node.
 goa_node_trade코0=Goa Trade Concession
 discover_ceylan_node_title코0=Discover what awaits in Southern India
 discover_ceylan_node_desc코0=For centuries, the spices and silk of Asia have inspired dreams of riches to European traders. They are within our grasp, but we first need to explore sea routes to the Indian trade node.
-discover_ceylan_tt코0=Discover the Ceylan Strait node.
+discover_ceylan_tt코0=Discover the Ceylon Strait node.
 ceylan_node_trade코0=Ceylon Trade Concession
 discover_bengal_node_title코0=Discover what awaits on the east coast of India
 discover_bengal_node_desc코0=For centuries, the spices and silk of Asia have inspired dreams of riches to European traders. They are within our grasp, but we first need to explore sea routes to the Indian trade node.
@@ -240,6 +240,7 @@ complete_mission코0=Complete this mission and take your reward
 mission_already_completed코0=You have already completed this mission
 HEADER_MISSIONS코0=Missions
 HEADER_DECISIONS코2=Decisions and Policies
+#Start New Missions
 secure_the_imperial_crown_title코0=Secure Electors
 secure_the_imperial_crown_desc코0=Ever since Rudolph, Count of Habsburg, was crowned Holy Roman Emperor and maneuvered his family into the Duchy of Austria, it has been the goal of all its Dukes to become Emperor. We must do what we can to ensure that the Empire has the stability it needs, an Austrian Emperor.
 subjugate_bohemia_title코1=Control Bohemia
@@ -251,7 +252,7 @@ partition_poland_desc코1=Once Polish Galicia formed a valuable buffer for us ag
 subjugate_hungary_title코0=Decline of Hungary
 subjugate_hungary_desc코0=Hungary's relative decline in relation to the Duchy of Austria is a cause for concern. We must tighten our relationship with Hungary to ensure its lands do not fall into hostile hands.
 austrian_hungary_title코0=Royal Hungary
-austrian_hungary_desc코0=The Kingdom of Hungary is threathened by dangerous enemies on all sides. We must step in and protect the Hungarian people directly, unifying their lands under one ruler.
+austrian_hungary_desc코0=The Kingdom of Hungary is threatened by dangerous enemies on all sides. We must step in and protect the Hungarian people directly, unifying their lands under one ruler.
 austrian_croatia_title코0=Secure Croatia
 austrian_croatia_desc코0=Let us create a military frontier in the old kingdom of Croatia. This way we can fend off anyone who would encroach on the Christian lands of South East Europe.
 conquer_transylvania_title코0=Conquer Transylvania
@@ -261,7 +262,7 @@ austrian_italian_ambition_desc코0=The rich lands of Northern Italy have long be
 unite_austria_title코1=Habsburg Domain
 unite_austria_desc코0=Following the German tradition the lands of the Habsburg family were divided to ensure each son received an inheritance. However the separate branches no longer recognize the seniority of the Austrian branch. We must unite the family lands if we are to prosper.
 head_of_the_habsburgs_title코0=AEIOU
-head_of_the_habsburgs_desc코0=It is Austria's destiny to rule the world and it is {Root.GetName}'s destiny to rule Austria. As the guardians of the Habsburg heritage we should take our place as the the rightful rulers of Austria.
+head_of_the_habsburgs_desc코0=It is Austria's destiny to rule the world and it is [Root.GetName]'s destiny to rule Austria. As the guardians of the Habsburg heritage we should take our place as the the rightful rulers of Austria.
 vassalize_wallachia_title코1=Conquer Wallachia
 vassalize_wallachia_desc코0=The Prince of Wallachia rules relatively poor land that the Sultan has no interest in ruling himself. However they do border our lands and it would be unwise to allow them to remain independent of us.
 vassalize_transylvania_title코1=Conquer Transylvania
@@ -279,7 +280,7 @@ defeat_the_byzantine_empire_desc코0=The last orders of the great prophet were t
 army_reforms_of_mehemed_II_title코0=Reform the Imperial Army
 army_reforms_of_mehemed_II_desc코0=As realized by Mehmed II, if our empire is to grow, we must build a large and modern army. Only with a strong standing army, salaried and with modern weapons, can we hope to re-impose order and Ottoman rule over Anatolia.
 consolidate_asia_minor_title코0=Consolidate Asia Minor
-consolidate_asia_minor_desc코0=The lands of Asia Minor are at the very core of the Empire where the Sultan draws the large percentage of his resources. After Timur's crushing defeat of our forces a few decades ago many of the local Beyliks have regained their strength and independence. We must consolidate our hold over Asia Minor and relcaim what was lost.
+consolidate_asia_minor_desc코0=The lands of Asia Minor are at the very core of the Empire where the Sultan draws the large percentage of his resources. After Timur's crushing defeat of our forces a few decades ago many of the local Beyliks have regained their strength and independence. We must consolidate our hold over Asia Minor and reclaim what was lost.
 safeguard_eastern_anatolia_title코1=Safeguard Anatolia
 safeguard_eastern_anatolia_desc코0=The strategic importance of controlling Yerevan and Diyarbakir cannot be overstated. We must secure our frontier against incursions from Persia by conquering and resettling these originally rich lands that were laid waste to by Tamerlane's armies.
 conquer_levant_title코0=Conquer Levant
@@ -339,7 +340,7 @@ recover_sicily_desc코0=Sicily was lost to the Empire in 965, when the island fe
 convert_rome_title코0=Rome Reclaimed!
 convert_rome_desc코0=Although not always directly controlled by the Empire, Rome finally severed all Byzantine ties when Pope Leo III crowned Charlemagne Holy Roman Emperor. Now, however, the city is back in our hands, and although it has suffered much it is finally ready to again receive the blessings of our patriarch.
 recover_northern_balkans_title코0=Northern Border
-recover_northern_balkans_desc코0=We must reclaim the old northern border and re-establish a new frontier against the germanic barbarians.
+recover_northern_balkans_desc코0=We must reclaim the old northern border and re-establish a new frontier against the Germanic barbarians.
 recover_western_balkans_title코1=Conquer The Balkans
 recover_western_balkans_desc코0=We must once again establish our authority over the Balkan peninsula, reclaiming the Adriatic coast and establishing the Danube as our northern border.
 recover_west_anatolia_title코1=Western Anatolia
@@ -347,7 +348,7 @@ recover_west_anatolia_desc코1=The time has come to reclaim Anatolia from the Tu
 recover_central_anatolia_title코1=Central Anatolia
 recover_central_anatolia_desc코1=We must continue to push back the Turks and reclaim more areas for the Roman Empire. Our rule must be re-established over the central parts of Anatolia both because it is our heritage and in order to properly defend the City of the World's desire itself.
 conquest_of_azerbaijan_title코0=Persian Azerbaijan
-conquest_of_azerbaijan_desc코0=As the capital of both the ilkhans and the black sheep, Tabriz is a city of central importance. It controls the greater area of Azerbaijan in western Persia. We must reclaim this region in its entirety.
+conquest_of_azerbaijan_desc코0=As the capital of both the Ilkhans and the Black Sheep, Tabriz is a city of central importance. It controls the greater area of Azerbaijan in western Persia. We must reclaim this region in its entirety.
 consolidate_iran_title코0=Consolidate Iran
 consolidate_iran_desc코0=The Iranian plateau has hosted many ancient civilizations and is the core of any Persian empire of note. We must ensure that the entire area is under our control and evict any brigands or foreign rulers, ensuring the safety of the great Persian cities.
 conquest_of_arabian_iraq_title코0=Najaf & Karbala
