--- a/en/opinions_l_english.properties
+++ b/en/opinions_l_english.properties
@@ -1,4 +1,4 @@
-took_on_debt코0=Took on Debt
+﻿took_on_debt코0=Took on Debt
 great_power_influence코0=Great Power Influence
 forced_break_alliance코0=Forced Break Alliance
 in_same_trade_league코0=In Same Trade League
@@ -53,7 +53,7 @@ spa_refused_ceding_malta코0=Refused Ceding Malta to The Knights
 spa_supported_rebels코0=Supported Rebels
 claimed_italy코0=Claimed Italy
 fightinginside_realm코0=Illegal War inside realm
-catholic_obstructing_church코0=Obstructing Church Business
+catholic_obstructing_church코1=Refused to pay Indulgences
 opinion_irritated코0=Irritated
 opinion_gossip코0=Gossip
 opinion_daimyo_gift코0=Precious Gift
