--- a/en/Purple_Phoenix_l_english.properties
+++ b/en/Purple_Phoenix_l_english.properties
@@ -1,4 +1,4 @@
-recover_east_anatolia_title코0=Recover Eastern Anatolia
+﻿recover_east_anatolia_title코0=Recover Eastern Anatolia
 recover_east_anatolia_desc코0=Complete the reconquest of Anatolia!
 recover_crimea_title코0=Recover Caffa
 recover_crimea_desc코0=Restoring Caffa to the Empire will allow us firmer control of the Black Sea trade.
@@ -86,3 +86,4 @@ triumph_anatolia_title코0=Triumph for Anatolia
 triumph_anatolia_desc코0=The soldiers and generals that have secured Anatolia once again surely deserve the highest of honors!
 triumph_italy_title코0=Triumph for Italy
 triumph_italy_desc코0=Our generals have now exceeded even the great Belisarius by returning the whole of Italy to Imperial control, and so they must be awarded the grandest triumph the Empire has ever seen!
+
