--- a/en/privateers_l_english.properties
+++ b/en/privateers_l_english.properties
@@ -1,4 +1,4 @@
-refused_aid_traders코0=Refused to aid Traders
+﻿refused_aid_traders코0=Refused to aid Traders
 desc_refused_aid_traders코0=Local traders were refused funds to help them against the threat of privateers.
 reckless_privateer코0=Reckless Privateer
 desc_reckless_privateer코0=A ruthless privateer was allowed free rein, leading to other privateers attempting bolder raids.
@@ -17,7 +17,7 @@ desc_merchants_prepare_war코0=Merchants are aiding in preparation for a Trade P
 merchants_ignored코0=Merchants' Concerns Ignored
 desc_merchants_ignored코0=Merchants are angered about the refusal to declare a Trade Protection war over the privateers attacking them.
 privateers.1.t코0=Local Traders Demand Aid
-privateers.1.d코0=Merchants and captains of trade vessels in {Root.GetName} have sent a representative to the government, describing their home as increasingly lawless land, where piracy runs rampant and ships and ports are routinely raided by privateers. They argue that the government has neglected them and request funding to build defenses against the growing threats. If this request is not granted, many feel like they have already lost too much and will take their business elsewhere.
+privateers.1.d코0=Merchants and captains of trade vessels in [Root.GetName] have sent a representative to the government, describing their home as increasingly lawless land, where piracy runs rampant and ships and ports are routinely raided by privateers. They argue that the government has neglected them and request funding to build defenses against the growing threats. If this request is not granted, many feel like they have already lost too much and will take their business elsewhere.
 privateers.1.a코0=Send them whatever they need.
 privateers.1.b코0=They have enough money to fund those defenses themselves.
 privateers.2.t코0=Invalid Letter of Marque?
@@ -25,7 +25,7 @@ privateers.2.d코1=Privateering is always a difficult diplomatic issue, especial
 privateers.2.a코0=This flimsy excuse can't be allowed to spare him from the gallows!
 privateers.2.b코0=We can afford to show some lenience in this rare case.
 privateers.3.t코0=Invalid Letter of Marque?
-privateers.3.d코0=Pirates are a constant scourge of our merchants, and successfully detaining them is usually a great victory not only for us, but for our trade partners as well. Our most recent capture of a supposed pirate, on the other hand, has turned into a diplomatic incident, as he claims to have been raiding ships on behalf of one of our own colonial subjects.\n\nThe captain has presented a letter of marque issued in the name of the {Root.Monarch.GetTitle}, but by a colonial governor. Supposedly, any aggression against us was a tragic misunderstanding. Desperately trying to avoid the gallows, the captain implores us to settle the matter with the governor.
+privateers.3.d코0=Pirates are a constant scourge of our merchants, and successfully detaining them is usually a great victory not only for us, but for our trade partners as well. Our most recent capture of a supposed pirate, on the other hand, has turned into a diplomatic incident, as he claims to have been raiding ships on behalf of one of our own colonial subjects.\n\nThe captain has presented a letter of marque issued in the name of the [Root.Monarch.GetTitle], but by a colonial governor. Supposedly, any aggression against us was a tragic misunderstanding. Desperately trying to avoid the gallows, the captain implores us to settle the matter with the governor.
 privateers.3.a코0=The governor overstepped his authority. This pirate will hang.
 privateers.3.b코0=A letter issued in our name is valid, even from a subject.
 privateers.4.t코0=A Reckless Privateer
@@ -36,20 +36,20 @@ privateers.5.t코0=Privateer Captain Goes Rogue
 privateers.5.d코0=There is a very fine line between privateering and piracy, especially in peacetime. The captain and crew of one of our privateering operations recently waltzed across that line when they decided to attack and plunder one of our own traders. Worse yet, we have been informed that this act of open defiance was only the beginning of their exploits, and that these traitors have now set out to make their own fortune... primarily, it seems, out of our fortune.
 privateers.5.a코0=We'll have their heads for this!
 privateers.6.t코0=Oceans Beyond Privateering
-privateers.6.d코0=One of our most accomplished privateers is making forays not only into enemy waters, but into parts of the world we were barely aware were under their control. His skills as a navigator could be put to better use if we provided the funds for a longer expedition to discover just how far the hand of the enemy reaches, perhaps even reaching further, claiming new lands for {Root.GetName} in the name of the {Root.Religion.GetName} faith.
+privateers.6.d코0=One of our most accomplished privateers is making forays not only into enemy waters, but into parts of the world we were barely aware were under their control. His skills as a navigator could be put to better use if we provided the funds for a longer expedition to discover just how far the hand of the enemy reaches, perhaps even reaching further, claiming new lands for [Root.GetName] in the name of the [Root.Religion.GetName] faith.
 privateers.6.a코0=Let him lead the way. Our ships shall encircle the world.
 privateers.6.b코0=Privateers should look for money from our enemies, not from us.
 privateers.7.t코0=Pirates Seeking Allegiance
-privateers.7.d코0=Our use of privateering to strengthen our position on the oceans has not gone unnoticed by the unsavory individuals who raid ships without the blessing of a {Root.Monarch.GetTitle}. While we prefer not to see many similarities between our legitimate authorizations of reprisal and these pests, some of them see quite a few.\n\nSome of the more successful pirates in our area of interest are seeking to receive the backing of {Root.GetName} is more or less official capacity. They are also suggesting, through crude insinuations, that if we don't take them up on the offer, someone else just might.
+privateers.7.d코0=Our use of privateering to strengthen our position on the oceans has not gone unnoticed by the unsavory individuals who raid ships without the blessing of a [Root.Monarch.GetTitle]. While we prefer not to see many similarities between our legitimate authorizations of reprisal and these pests, some of them see quite a few.\n\nSome of the more successful pirates in our area of interest are seeking to receive the backing of [Root.GetName] is more or less official capacity. They are also suggesting, through crude insinuations, that if we don't take them up on the offer, someone else just might.
 privateers.7.a코0=We could use some ruthless seafarers in our employ.
 privateers.7.b코0=This is extortion. We won't do business with pirates.
-privateers.7.b.tt코0=The pirates will take their 'business' to the {This.Monarch.GetTitle} of {This.GetName} instead.
+privateers.7.b.tt코0=The pirates will take their 'business' to the [This.Monarch.GetTitle] of [This.GetName] instead.
 privateers.8.t코0=Pirates Seeking Allegiance
-privateers.8.d코0=A group of pirates recently approached one of our privateers, requesting {Root.GetAdjective} support in their efforts to plunder and pillage. Of course, once they have our backing, our own ships would be safe from them. Apparently, they are especially interested in raiding the trade routes of {From.GetName}, since they seem to have presented the same offer to the {From.GetAdjective} {From.Monarch.GetTitle} and been rejected and insulted in response.
+privateers.8.d코0=A group of pirates recently approached one of our privateers, requesting [Root.GetAdjective] support in their efforts to plunder and pillage. Of course, once they have our backing, our own ships would be safe from them. Apparently, they are especially interested in raiding the trade routes of [From.GetName], since they seem to have presented the same offer to the [From.GetAdjective] [From.Monarch.GetTitle] and been rejected and insulted in response.
 privateers.8.a코0=We have no such reservations. They can count themselves among our privateers.
-privateers.8.b코0={From.Monarch.GetTitle} {From.Monarch.GetName} was right to reject this scourge of honest traders.
+privateers.8.b코0=[From.Monarch.GetTitle] [From.Monarch.GetName] was right to reject this scourge of honest traders.
 privateers.9.t코0=Captured Slavers
-privateers.9.d코0=One of our privateers has captured a ship containing what its owners considered cargo, but what we consider people: Slaves. {Root.GetName} has outlawed the abhorrent practice of slavery, but other nations are not so enlightened.\n\nThe slaves have gained their freedom, but there is still some discussion about what to do with those who transported them. Showing lenience and treating them as traders, although operating under a different flag and legislation, would be the diplomatic option. However, our laws and moral sensibilities suggest that slavers should always be viewed as pirates and kidnappers and dealt with accordingly.
+privateers.9.d코0=One of our privateers has captured a ship containing what its owners considered cargo, but what we consider people: Slaves. [Root.GetName] has outlawed the abhorrent practice of slavery, but other nations are not so enlightened.\n\nThe slaves have gained their freedom, but there is still some discussion about what to do with those who transported them. Showing lenience and treating them as traders, although operating under a different flag and legislation, would be the diplomatic option. However, our laws and moral sensibilities suggest that slavers should always be viewed as pirates and kidnappers and dealt with accordingly.
 privateers.9.a코0=Those who trade in human lives are pirates and nothing more.
 privateers.9.b코0=We'll let them go for now.
 privateers.10.t코0=Feuding Families
