--- a/en/richpresence_l_english.properties
+++ b/en/richpresence_l_english.properties
@@ -1,4 +1,4 @@
-SOCIAL_DSTATUS_IN_MAIN_MENU코0=In the Main Menu
+﻿SOCIAL_DSTATUS_IN_MAIN_MENU코0=In the Main Menu
 SOCIAL_DSTATUS_IN_SP_LOBBY코0=In the Singleplayer Lobby
 SOCIAL_DSTATUS_IN_MP_LOBBY코0=In the Multiplayer Lobby
 SOCIAL_DSTATUS_PLAYING_AS코0=Ruling as $TITLE$ of $COUNTRY$ in $YEAR$
