--- a/en/subject_type_l_english.properties
+++ b/en/subject_type_l_english.properties
@@ -1,4 +1,4 @@
-vassal_title코0=Vassal
+﻿vassal_title코0=Vassal
 march_title코0=March
 client_vassal_title코0=Client State
 client_march_title코0=Client State March
@@ -14,10 +14,13 @@ personal_union_title_plural코0=Junior Partners
 protectorate_title_plural코0=Protectorates
 colony_title_plural코0=Colonies
 daimyo_vassal_title_plural코0=Daimyos
+DEFAULT_OVERLORD코0=Overlord
+personal_union_overlord_title코0=Senior Partner
+colony_overlord_title코0=Home Nation
 vassal_long_desc코0=A Vassal must follow their overlord to war, cannot make certain diplomatic actions and will pay a fraction of his income to his overlord.
 march_long_desc코0=A March is a Vassal that cannot be annexed and does not pay any taxes, but has greater military capacity than a regular Vassal.
 client_vassal_long_desc코0=Like a regular Vassal, a Client State must follow their overlord to war, cannot make certain diplomatic actions and will pay a fraction of his income to his overlord.
-daimyo_vassal_long_desc코0=A Daimyo subjet must follow their overlord to war, cannot make certain diplomatic actions and will pay a fraction of his income to his overlord. Daimyo subjects can also fight each other.
+daimyo_vassal_long_desc코0=A Daimyo subject must follow their overlord to war, cannot make certain diplomatic actions and will pay a fraction of his income to his overlord. Daimyo subjects can also fight each other.
 client_march_long_desc코0=Like a regular March, a Client State March cannot be annexed and does not pay any taxes, but has greater military capacity than a regular Vassal.
 colony_long_desc코0=A colony is a separate colonial state under the rule of their overlord. Colonies are required to pay a monthly tariff to their overlord and will submit $TRADE|0%$ amount of their trade power. Colonies can only declare war on primitives or other colonies.
 protectorate_long_desc코0=A Protectorate will provide half of its trade power to the overlord, while the overlord protects it.
