--- a/en/synthetic_dawn_l_english.properties
+++ b/en/synthetic_dawn_l_english.properties
@@ -1,4 +1,4 @@
-synthetic_dawn.1.t코0=Synthetic Dawn
+﻿synthetic_dawn.1.t코0=Synthetic Dawn
 synthetic_dawn.1.d코0=They came from the sky in immense metal vessels larger than a city. The slaughter began as soon as they disembarked; unfeeling monsters covered entirely in armor and with no discernible flesh or blood exterminated all in their path. The Synthetic invasion has begun.
 synthetic_dawn.1.a코0=What are these creatures? What do they want?
 synthetic_dawn.2.t코0=Synthetics on the Horizon!
@@ -7,8 +7,8 @@ synthetic_dawn.2.a코1=Prepare for the worst.
 synthetic_dawn.3.t코0=Synthetic Dusk
 synthetic_dawn.3.d코0=The last of the Synthetics has been destroyed. Though much of the world now lies in ruin and countless people have lost their lives, the world is finally rid of them. Scavengers mill over their static husks searching for some clue as to how these murderous automatons were able to function and what drove them to invade our world. They find few answers. But perhaps some of the technology they left behind might be adapted to our own purposes.
 synthetic_dawn.3.a코0=We will not go quietly into the night!
-synthetic_dawn.4.t코0={Root.Province.GetName} Falls to the Synthetics
-synthetic_dawn.4.d코0=With cold, ruthless efficiency they systematically massacred all who called {Root.Province.GetName} home, leaving behind a desolate wasteland.
+synthetic_dawn.4.t코0=[Root.Province.GetName] Falls to the Synthetics
+synthetic_dawn.4.d코0=With cold, ruthless efficiency they systematically massacred all who called [Root.Province.GetName] home, leaving behind a desolate wasteland.
 synthetic_dawn.4.d2코0=The Swiss Guard did all they could to buy time for the Pope to escape Roma. Though they were massacred to the last man, their heroic sacrifice was not in vain as the pontiff managed to flee before the Synthetics reached the Passetto di Borgo. God preserve the Holy Father!
 synthetic_dawn.4.a코0=The Synthetics will pay for this.
 synthetic_dawn.5.t코0=Temporal Rift
