--- a/en/technology_l_english.properties
+++ b/en/technology_l_english.properties
@@ -1,4 +1,4 @@
-MAY_MERCHANTS코0=Can place §Ymerchants§W.\n
+﻿MAY_MERCHANTS코0=Can place §Ymerchants§W.\n
 MAY_BLOCKADE코0=Can §YBlockade Ports§W.
 MAY_FORM_COALITION코0=Can Form §YCoalitions§W.
 TRADE_EFF코0=Trade Efficiency Increased by $VALUE$.\n
@@ -242,6 +242,7 @@ dip_tech_cs_30_desc코0=A further reduction of risk came with the development of
 dip_tech_cs_31_desc코0=Building ships that are slightly faster than those of our opponents, even if the amount of this extra speed is so negligible that it is of no military significance, can still fill our crews with confidence and make our enemy wary of taking us on in an even fight.
 dip_tech_cs_32_desc코0=The ongoing trade deficit between Europe and China has caused a shortage of silver bullion in Europe and all over the world. Switching from silver coinage to gold coinage will allow new coinage to enter circulation and get trade flowing in ever greater amounts.
 FROM_TECH코0=From Technology: $VAL|%=+1$
+FROM_TECH_NON_PERC코0=From Technology: $VAL|=+0$\n
 CURRENT_TECH_DESC코0=Current Technology Level is §Y'$TECH$'§!.
 central_african코0=Central African
 central_african_desc코0=With the Central Africa technology group, technology levels are 65% more expensive (165%).
